duckduckgo: fixed 'click for info' issue (requires element z-index)

--- a/html/css/vpd.css
+++ b/html/css/vpd.css
@@ -156,6 +156,7 @@ main div.panel div.clickable {
   width: 100%;
   height: 100%;
   background: transparent;
+  z-index: 3;
 }
 main div#left {
   grid-column: 1;
