--- a/sass/modules/_vpd.scss
+++ b/sass/modules/_vpd.scss
@@ -158,7 +158,9 @@ main {
 
       width: 100%;
       height: 100%;
-      background: transparent;      
+      background: transparent;
+
+      z-index: 3;
     }
   }
 
